<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--content-->
    <LinearLayout
        android:background="#82ffffff"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="@dimen/padding"
        android:layout_width="@dimen/content1"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <!--logo-->
        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="245dp"
            android:layout_height="144dp"
            android:src="@drawable/logonew" />

        <!--user-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<icon-->
            <ImageView
                android:src="@mipmap/ic_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--<user-->
            <EditText
                android:id="@+id/edtUser"
                android:inputType="text"
                android:hint="@string/user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <!--password-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!--<icon-->
            <ImageView
                android:src="@mipmap/ic_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <!--Password-->
            <EditText
                android:id="@+id/edtPassword"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <!--signin-->
        <Button
            android:id="@+id/btnLogin"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:text="@string/signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--new register-->
        <TextView
            android:id="@+id/txtRegister"
            android:clickable="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/h2"
            android:text="@string/newregister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--contact-->
        <TextView
            android:id="@+id/contact"
            android:clickable="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:textSize="@dimen/h2"
            android:text="@string/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />


    </LinearLayout>

</RelativeLayout>